--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
         width: 100%;
         z-index: 50;
         padding: 1rem 0; /* Ajout d'espace vertical */
+        top: 0;
       }
 
       .container {
@@ -78,7 +79,7 @@
       }
 
       main {
-        padding-top: 6rem; /* Augmentation de l'espace sous le header */
+        padding-top: 12rem; /* Augmentation supplémentaire de l'espace sous le header pour résoudre le problème */
         margin-bottom: 2rem; /* Ajout d'espace avant le footer */
       }
 
