--- a/templates/courses/home.html
+++ b/templates/courses/home.html
@@ -14,7 +14,7 @@ Plateforme d'E-learning{% endblock %} {% block content %}
       />
     </div>
     <div class="hero-section container mx-auto px-4 py-16 md:py-24">
-      <div class="max-w-lg">
+      <div class="max-w-lg mt-11">
         <h1 class="text-4xl font-bold text-gray-900 mb-4">
           Bienvenue sur notre plateforme
         </h1>
