--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,7 @@
       }
 
       main {
+        margin-top: 6rem; /* Espace sous le header */
         padding-top: 12rem; /* Augmentation supplémentaire de l'espace sous le header pour résoudre le problème */
         margin-bottom: 2rem; /* Ajout d'espace avant le footer */
       }
