--- a/templates/courses/home.html
+++ b/templates/courses/home.html
@@ -4,7 +4,7 @@ Plateforme d'E-learning{% endblock %} {% block content %}
   <!-- Hero Section -->
 
   <div
-    class="relative bg-gradient-to-r from-purple-500 via-pink-500 to-red-500 h-screen"
+    class="relative bg-gradient-to-r from-purple-500 via-pink-500 to-red-500 pt-9 h-screen"
   >
     <div class="absolute inset-0">
       <img
