--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}Plateforme E-Learning{% endblock %}</title>
+    <title>{% block title %}Plateforme TechEduc{% endblock %}</title>
     {% load static %}
     <link href="{% static 'css/output.css' %}" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -65,7 +65,7 @@
             </a>
             <a
               href="{% url 'account_signup' %}"
-              class="py-2 px-2 font-medium text-white bg-blue-500 rounded hover:bg-blue-400 transition duration-300"
+              class="py-2 px-2 font-medium text-white bg-blue-600 rounded hover:bg-blue-400 transition duration-300"
             >
               Inscription
             </a>
