--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %} {% load i18n %} {% load account %} {% block title %}{%
 trans "Connexion" %}{% endblock %} {% block content %}
 <div
-  class="min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8"
+  class="min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8 bg-gray-50"
 >
-  <div class="max-w-md w-full space-y-8">
+  <div class="max-w-md w-full space-y-8 bg-white p-8 rounded-lg shadow-lg">
     <div>
       <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
         {% trans "Connexion à votre compte" %}
@@ -43,7 +43,7 @@ trans "Connexion" %}{% endblock %} {% block content %}
       {% endif %}
 
       <div class="rounded-md shadow-sm -space-y-px">
-        <div>
+        <div class="pb-3">
           <label for="id_login" class="sr-only">{% trans "Email" %}</label>
           <input
             id="id_login"
@@ -51,7 +51,7 @@ trans "Connexion" %}{% endblock %} {% block content %}
             type="email"
             autocomplete="email"
             required
-            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-blue-500 focus:border-blue-500 focus:z-10 sm:text-sm"
+            class="appearance-none rounded-t-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-blue-500 focus:border-blue-500 focus:z-10 sm:text-sm"
             placeholder="{% trans 'Adresse email' %}"
           />
         </div>
@@ -65,7 +65,7 @@ trans "Connexion" %}{% endblock %} {% block content %}
             type="password"
             autocomplete="current-password"
             required
-            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-blue-500 focus:border-blue-500 focus:z-10 sm:text-sm"
+            class="appearance-none rounded-b-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-blue-500 focus:border-blue-500 focus:z-10 sm:text-sm"
             placeholder="{% trans 'Mot de passe' %}"
           />
         </div>
