--- a/templates/courses/course_detail.html
+++ b/templates/courses/course_detail.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %} {% block title %}Détails du cours{% endblock %} {%
-block content %}
+{% extends "base.html" %} {% block content %}
 <div class="container mx-auto py-8">
   <h1 class="text-3xl font-bold mb-4">{{ course.title }}</h1>
   <img src="{{ course.thumbnail.url }}" alt="{{ course.title }}" class="mb-4" />
